--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,11 +12,9 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Checkout Configuration
-        uses: actions/checkout@v4
-
       - name: Run
         uses: GarnerCorp/build-actions/get-image-and-run-command@main
         with:
           image: "blob"
           command: "blob"
+          checkout: "true"
